--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,48 @@
-# Exclude the entire backend SDK and local environment
-charmbills-backend/
-
-# Also ensure common build artifacts and secrets are ignored
+# Environment variables and secrets
 .env
 .env.local
-*.log
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Dependencies
 node_modules/
-.DS_Store
 .next/
 dist/
+target/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Build artifacts
+*.wasm
+*.wasm:Zone.Identifier
+app.b64
+test-spell.json
+tree.bat
+
+# Debug
+debug/
+*.debug
+
+# Local overrides
+*.local.yaml
