--- a/charmbills-frontend/package.json
+++ b/charmbills-frontend/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -61,6 +62,8 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
+    "@leather.io/rpc": "^2.21.4",
+    "@scure/btc-signer": "^2.0.1",
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^19",
