--- a/charmbills-backend/package.json
+++ b/charmbills-backend/package.json
@@ -1,20 +1,30 @@
 {
   "name": "charmbills-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node -r dotenv/config -r tsconfig-paths/register src/runMintFlow.ts",
+    "start:backend": "ts-node -r dotenv/config -r tsconfig-paths/register src/index.ts",
+    "start": "npm run start:backend",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.6",
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
-    "@types/node": "^25.0.2"
+    "@types/cors": "^2.8.19",
+    "@types/node": "^25.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
