--- a/charmbills-backend/tsconfig.json
+++ b/charmbills-backend/tsconfig.json
@@ -1,27 +1,19 @@
 {
-    "compilerOptions": {
-      /* Language & runtime */
-      "target": "ES2020",
-      "module": "commonjs",
-      "moduleResolution": "node",
-  
-      /* Interop & correctness */
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "strict": true,
-      "skipLibCheck": true,
-  
-      /* Paths & structure */
-      "baseUrl": ".",
-      "paths": {
-        "@/*": ["../*"]
-      },
-  
-      /* Output (optional for ts-node, required later) */
-      "outDir": "dist",
-      "resolveJsonModule": true
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["../*"]
     },
-    "include": ["src", "../shared"],
-    "exclude": ["node_modules", "dist"]
-  }
-  
+    "outDir": "dist",
+    "resolveJsonModule": true
+  },
+  "include": ["src", "../shared"],
+  "exclude": ["node_modules", "dist",  "src/runMintFlow.ts",]
+}
